--- a/client/documentation.html
+++ b/client/documentation.html
@@ -22,7 +22,7 @@
                 <button id="profile-btn">Configuració</button>
                 <div class="dropdown-content" id="dropdown-content">
                     <button id="settings-btn">Configuració</button>
-                    <button id="Preferences-btn">Preferencies</button>
+                    <!--<button id="Preferences-btn">Preferencies</button>-->
                     <button id="logout-btn">Tancar Sessió</button>
                 </div>
             </div>
