--- a/client/loginRegister.html
+++ b/client/loginRegister.html
@@ -19,23 +19,23 @@
   <div class="container">
     <h1>FeelGuard Beta</h1>
     <form id="loginForm" class="form" style="display: flex;">
-      <h2>Iniciar Sesión</h2>
+      <h2>Iniciar Sessió</h2>
       <input class="input" name="email" type="email" placeholder="Correo electrónico" required>
       <input class="input" name="password" type="password" placeholder="Contraseña" required>
       <div id="loginError"class="error"></div>
-      <p>¿No tienes una cuenta? <a href="#" onclick="toggleForm()">Registrarse</a></p>
-      <button type="submit">Iniciar Sesión</button>
+      <p>No tens compte? <a href="#" onclick="toggleForm()">Registrar-se</a></p>
+      <button type="submit">Iniciar Sessió</button>
     </form>
 
     <form id="registerForm" class="form">
-      <h2>Registrarse</h2>
+      <h2>Registrar-se</h2>
       <input class="input" name="name" type="text" placeholder="Nombre" required>
       <input class="input" name="email" type="email" placeholder="Correo electrónico" required>
       <input class="input" name="password" type="password" placeholder="Contraseña" required>
       <input class="input" name="code" type="password" placeholder="Codigo de Registro" required>
       <div id="registerError"class="register error"></div>
-      <button type="submit">Registrarse</button>
-      <p>¿Ya tienes una cuenta? <a href="#" onclick="toggleForm()">Iniciar sesión</a></p>
+      <button type="submit">Registrar-se</button>
+      <p>Ja tens un compte? <a href="#" onclick="toggleForm()">Iniciar Sessió</a></p>
     </form>
   </div>
   <script src="/js/loginRegister.js"></script>
