--- a/client/main.html
+++ b/client/main.html
@@ -21,7 +21,7 @@
                 <button id="profile-btn">Configuració</button>
                 <div class="dropdown-content" id="dropdown-content">
                     <button id="settings-btn">Configuració</button>
-                    <button id="Preferences-btn">Preferencies</button>
+                    <!--<button id="Preferences-btn">Preferencies</button>-->
                     <button id="logout-btn">Tancar Sessió</button>
                 </div>
             </div>
@@ -49,12 +49,12 @@
 
         <section class="uploadVideo" id="uploadVideo"style="display:none;">
             <label for="videoUpload" class="file-upload">
-                <img src="" alt="Subir archivo" class="iconUpload">
-                <span id="estadoImagen">Sin video seleccionado</span>
+                <img src="" alt="Pujar Arxiu" class="iconUpload">
+                <span id="estadoImagen">Sense Vídeo Seleccionat</span>
             </label>
             <input type="file" id="videoUpload" accept="video/*" multiple style="display: none">
             <button id="cancel-upload-btn">Cancelar</button>
-            <button id="upload-btn">Pujar Videos</button>
+            <button id="upload-btn">Pujar Vídeos</button>
             <button id="finish-upload-btn">Finalitzar</button>
         </section>
 
