--- a/client/sessionDashboard.html
+++ b/client/sessionDashboard.html
@@ -23,23 +23,23 @@
         <div class="grid-container">
             <div class="info1">
                 <h2>Informació General</h2>
-                <div>Sesión ID: <span id="sessionId">0</span></div>
+                <div>ID Sessió: <span id="sessionId">0</span></div>
                 <div>Data de la Sessió: <span id="sessionData">0</span></div>
                 <div>Hora de la Sessió: <span id="sessionHour">0</span></div>
-                <div>Numero de videos: <span id="videosNumber">0</span></div>
+                <div>Número de Vídeos: <span id="videosNumber">0</span></div>
             </div>
             <div class="info2">
                 <h2>Informació dels Models</h2>
                 
             </div>
             <div class="info3">
-                <h2>Resultats Globals del Video</h2>
+                <h2>Resultats Globals de la Sessió</h2>
                 <canvas id="chartGlobal"></canvas>
                 <div></div>
                 
             </div>
             <div class="chart1" colspan="2">
-                <h2>Grafic Evolitu de les emocions</h2>
+                <h2>Gràfic Evolitu de les Emocions</h2>
                 <canvas id="chart"></canvas>
             </div>
             <section class="videos" id="videos">
