--- a/client/videoDashboard.html
+++ b/client/videoDashboard.html
@@ -24,25 +24,25 @@
         <div class="grid-container">
             <div class="info1">
                 <h2>Informació General</h2>
-                <div>Sessió ID: <span id="sessionId">0</span></div>
+                <div>ID Sessió: <span id="sessionId">0</span></div>
                 <div>Data de la Sessió: <span id="sessionData">0</span></div>
                 <div>Hora de la Sessió: <span id="sessionHour">0</span></div>
-                <div>Video ID: <span id="videoId">0</span></div>
-                <div>Duració del Video: <span id="videoDuration">0</span></div>
-                <div>Número de frases: <span id="phraseNumber">0</span></div>
+                <div>Vídeo ID: <span id="videoId">0</span></div>
+                <div>Duració del Vídeo: <span id="videoDuration">0</span></div>
+                <div>Número de Frases: <span id="phraseNumber">0</span></div>
             </div>
             <div class="info2">
                 <h2>Informació dels Models</h2>
                 
             </div>
             <div class="info3">
-                <h2>Resultats Globals del Video</h2>
+                <h2>Resultats Globals del Vídeo</h2>
                 <canvas id="chartGlobal"></canvas>
                 <div></div>
 
             </div>
             <div class="chart1" colspan="3">
-                <h2>Grafic Face Model</h2>
+                <h2>Gràfic Face Model</h2>
                 <canvas id="chart1"></canvas>
             </div>
             <div class="video" colspan="2">
@@ -52,7 +52,7 @@
                 </video>
             </div>
             <div class="chart2" colspan="2">
-                <h2>Grafic FACS Model</h2>
+                <h2>Gràfic FACS Model</h2>
                 <canvas id="chart2"></canvas>
             </div>
             <section class="analyzedText" id="analyzedText">
