--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -25,7 +25,7 @@
                 <button id="profile-btn">Configuració</button>
                 <div class="dropdown-content" id="dropdown-content">
                     <button id="settings-btn">Configuració</button>
-                    <button id="Preferences-btn">Preferencies</button>
+                    <!--<button id="Preferences-btn">Preferencies</button>-->
                     <button id="logout-btn">Tancar Sessió</button>
                 </div>
             </div>
@@ -55,8 +55,8 @@
         <div class="container sessionContainer" id="sessionContainer" style="display:none;">
             <div class="grid-container">
                 <div class="info1">
-                    <h2>Información General</h2>
-                    <div>Número de sessions: <span id="numSession">0</span></div>
+                    <h2>Informació General</h2>
+                    <div>Número de Sessions: <span id="numSession">0</span></div>
                 </div>
                 <div class="info2">
                     <h2>Resultats Globals</h2>
@@ -67,7 +67,7 @@
                     <canvas id="chartGlobal"></canvas>
                 </div>
                 <div class="chart2" colspan="2">
-                    <h2>Grafic Evolitu de les emocions</h2>
+                    <h2>Gràfic Evolitu de les emocions</h2>
                     <canvas id="chart"></canvas>
                 </div>
                 <section class="modelButtons">
