Nueva pantalla resumen

--- a/client/main.html
+++ b/client/main.html
@@ -17,6 +17,7 @@
             <button id="main">Main</button>
             <button id="documentation">Documentació</button>
             <button id="filter">Sessions</button>
+            <button id="plotDashboard">Resum</button>
             <div class="profile-dropdown">
                 <button id="profile-btn">Configuració</button>
                 <div class="dropdown-content" id="dropdown-content">
