--- a/client/resumDashboard.html
+++ b/client/resumDashboard.html
@@ -58,6 +58,9 @@
 
         <div class="container sessionContainer" id="sessionContainer" style="display:none;">
             <div class="grid-container">
+                <div class="info0">
+                    <h2>Sessió</h2>
+                </div>
                 <div class="info1">
                     <h2>Qüestionari</h2>
                 </div>
