--- a/client/sessionDashboard.html
+++ b/client/sessionDashboard.html
@@ -35,7 +35,10 @@
             <div class="info3">
                 <h2>Resultats Globals de la Sessió</h2>
                 <canvas id="chartGlobal"></canvas>
-                <div></div>
+                <div class="input-Qresult" id="input-Qresult">
+                    <label for="resultatQ"><strong>Resultat Qüestionari:</strong></label>
+                    <input class="resultatQ" type="number" name="name" id="resultatQ" placeholder=""min="0" max="27">
+                </div>
                 
             </div>
             <div class="chart1" colspan="2">
