Analisi d'emocions: detecció d'inconcruencies

--- a/client/sessionDashboard.html
+++ b/client/sessionDashboard.html
@@ -28,7 +28,7 @@
                 <div>Hora de la Sessió: <span id="sessionHour">0</span></div>
                 <div>Número de Vídeos: <span id="videosNumber">0</span></div>
             </div>
-            <div class="info2">
+            <div class="info2" id="info2">
                 <h2>Informació dels Models</h2>
                 
             </div>
@@ -50,7 +50,9 @@
         </div>
     </div>
     <script src="/js/colorChart.js"></script>
+    <script src="/js/EmotionsPosNeg.js"></script>
     <script src="/js/sessionDashboard/createSessionDashboard.js"></script>
     <script src="/js/sessionDashboard/updateSessionDashboard.js"></script>
+    <script src="/js/sessionDashboard/analyzeSessionDashboard.js"></script>
 </body>
 </html>
