--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -59,7 +59,7 @@
                     <h2>Informació General</h2>
                     <div>Número de Sessions: <span id="numSession">0</span></div>
                 </div>
-                <div class="info2">
+                <div class="info2"id="info2">
                     <h2>Resultats Globals</h2>
                     <div></div>
                 </div>
@@ -91,9 +91,11 @@
     <script src="/js/colorChart.js"></script>
     <script src="/js/init.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/EmotionsPosNeg.js"></script>
     <script src="/js/userDashboard/createUserDashboard.js"></script>
     <script src="/js/userDashboard/calendar.js"></script>
     <script src="/js/userDashboard/updateUserDashboard.js"></script>
+    <script src="/js/userDashboard/analyzeUserDashboard.js"></script>
 </body>
 
 </html>
