--- a/client/videoDashboard.html
+++ b/client/videoDashboard.html
@@ -31,7 +31,7 @@
                 <div>Duració del Vídeo: <span id="videoDuration">0</span></div>
                 <div>Número de Frases: <span id="phraseNumber">0</span></div>
             </div>
-            <div class="info2">
+            <div class="info2" id="info2">
                 <h2>Informació dels Models</h2>
                 
             </div>
@@ -60,6 +60,7 @@
         </div>
     </div>
     <script src="/js/colorChart.js"></script>
+    <script src="/js/EmotionsPosNeg.js"></script>
     <script src="/js/videoDashboard/createVideoDashboard.js"></script>
     <script src="/js/videoDashboard/updateVideoDashboard.js"></script>
     <script src="/js/videoDashboard/analyzeVideoDashboard.js"></script>
