--- a/client/loginRegister.html
+++ b/client/loginRegister.html
@@ -20,8 +20,8 @@
     <h1>FeelGuard Beta</h1>
     <form id="loginForm" class="form" style="display: flex;">
       <h2>Iniciar Sessió</h2>
-      <input class="input" name="email" type="email" placeholder="Correo electrónico" required>
-      <input class="input" name="password" type="password" placeholder="Contraseña" required>
+      <input class="input" name="email" type="email" placeholder="Correu electrònic" required>
+      <input class="input" name="password" type="password" placeholder="Contrasenya" required>
       <div id="loginError"class="error"></div>
       <p>No tens compte? <a href="#" onclick="toggleForm()">Registrar-se</a></p>
       <button type="submit">Iniciar Sessió</button>
@@ -29,10 +29,10 @@
 
     <form id="registerForm" class="form">
       <h2>Registrar-se</h2>
-      <input class="input" name="name" type="text" placeholder="Nombre" required>
-      <input class="input" name="email" type="email" placeholder="Correo electrónico" required>
-      <input class="input" name="password" type="password" placeholder="Contraseña" required>
-      <input class="input" name="code" type="password" placeholder="Codigo de Registro" required>
+      <input class="input" name="name" type="text" placeholder="Nom" required>
+      <input class="input" name="email" type="email" placeholder="Correu electrònic" required>
+      <input class="input" name="password" type="password" placeholder="Contrasenya" required>
+      <input class="input" name="code" type="password" placeholder="Codi de Registre" required>
       <div id="registerError"class="register error"></div>
       <button type="submit">Registrar-se</button>
       <p>Ja tens un compte? <a href="#" onclick="toggleForm()">Iniciar Sessió</a></p>
