--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -18,7 +18,7 @@
     <h4>Code made by Jordi Sánchez</h4>
     <section class="container">
         <section class="header">
-            <button id="main">Main</button>
+            <button id="main">Consulta</button>
             <button id="documentation">Documentació</button>
             <button id="filter">Sessions</button>
             <button id="plotDashboard">Resum</button>
